--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=CrudSpringBoot
+# ????????? ??????????? ? ???? ?????? PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1221
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ????????? Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ????????? ???????
+server.port=8080
